--- a/src/containers/greeting/Greeting.css
+++ b/src/containers/greeting/Greeting.css
@@ -1,5 +1,5 @@
 .main {
-  width: 90%;
+  max-width: 1380px;
   padding: 20px 10px;
   margin: 0px auto;
   margin-top: 4rem;
@@ -57,6 +57,12 @@
 
 /* Media Query */
 @media (max-width: 1380px) {
+  .main {
+    max-width: 90%;
+    padding: 20px 10px;
+    margin: 0px auto;
+    margin-top: 4rem;
+  }
   .greeting-text {
     font-size: 50px;
   }
